--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: .3rem;
+    color: #362B2B;
 }
 
 .search_img {
@@ -340,4 +341,14 @@ progress::-webkit-progress-value {
         border-radius: 100%;
         height: 1rem;
     }
+}
+
+
+.error-page {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
